kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-project
  labels:
    name: kubernetes-project
