kubernetes/promtail.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:2.6.1
          args:
            - "-config.file=/etc/promtail/config.yml"
          ports:
          - name: http
            containerPort: 9080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/promtail
            - name: varlog
              mountPath: /var/log
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
---


---







---

---
