kubernetes/homepage.yaml
---

---

---

---

---

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: NodePort
  ports:
    # - port: 3000
    #   targetPort: http
    #   protocol: TCP
    #   name: http
    - name: homepage-web
      port: 3000
      targetPort: 3000
      nodePort: 30770
      protocol: TCP
  selector:
    app.kubernetes.io/name: homepage
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
---

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: homepage
#   namespace: default
#   labels:
#     app.kubernetes.io/name: homepage
#   annotations:
#     gethomepage.dev/description: Dynamically Detected Homepage
#     gethomepage.dev/enabled: "true"
#     gethomepage.dev/group: Cluster Management
#     gethomepage.dev/icon: homepage.png
#     gethomepage.dev/name: Homepage
# spec:
#   rules:
#     - host: "homepage.my.network"
#       http:
#         paths:
#           - path: "/"
#             pathType: Prefix
#             backend:
#               service:
#                 name: homepage
#                 port:
#                   number: 3000
---
