kubernetes/loki.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.6.1
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          ports:
            - containerPort: 3100
          # volumeMounts:
          #   - name: config-volume
          #     mountPath: /etc/loki
      # volumes:
      # - name: config-volume
      #   configMap:
      #     name: loki-config
      restartPolicy: Always
---

# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: loki-config
#   namespace: logging
# data:
#   local-config.yaml: |
# ---

---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: logging
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    app: loki
status:
  loadBalancer: {}
---
