kubernetes/plex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plexserver
---
---

---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plexserver
spec:
  type: NodePort
  ports:
    - name: pms-web
      port: 32400
      targetPort: 32400
      nodePort: 30772
      protocol: TCP
  selector:
    app: plex
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  namespace: plexserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - mountPath: "/Volumes/Elements"
          name: plex-vol
      volumes:
      - name: plex-vol
        persistentVolumeClaim:
          claimName: plex-pvc
---
