kubernetes/pythonapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: kubernetes-project
  labels:
    app: flaskapp
  annotations:
spec:
  type: NodePort
  ports:
    # - port: 3000
    #   targetPort: http
    #   protocol: TCP
    #   name: http
    - name: flaskapp-web
      port: 8080
      targetPort: 8080
      nodePort: 30768
      protocol: TCP
  selector:
    app: flaskapp
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp-deployment
  namespace: kubernetes-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: dockedupstream/mypythonapp:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
---
