kubernetes/tautulli.yaml
# Monitor your Plex Media Server. Used over as a widget on homepage.yaml

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tautulli
      k8s-app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
        k8s-app: tautulli
    spec:
      containers:
      - name: tautulli
        securityContext:
          privileged: true
        image: tautulli/tautulli
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: 8181
        volumeMounts:
          - mountPath: "/config"
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
---

---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    k8s-app: tautulli
spec:
  type: NodePort
  ports:
  # - port: 8181
  #   targetPort: 8181
  #   protocol: TCP
  #   name: http
  - name: tautulli-web
    port: 8181
    targetPort: 8181
    nodePort: 30769
    protocol: TCP
  selector:
    k8s-app: tautulli
---

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  labels:
    k8s-app: tautulli
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - "tautulli.k.oneill.net"
      secretName: "tautulli-tls"
  rules:
    - host: "tautulli.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
---
